# Sudoku-

./: .gitignore  CMakeLists.txt  main.cpp  sudokuapp.cpp  sudokuapp.h
